feat: Implement persistent login and PWA features
Introduces persistent login functionality using local storage, allowing users to remain logged in across sessions.
Enhances the application with Progressive Web App (PWA) capabilities by adding necessary meta tags for offline access and better mobile integration.
Includes minor UI adjustments and performance optimizations for a smoother user experience.
Adds a "Clear Recovered" functionality to the analysis dashboard to remove all vehicles marked as recovered.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>SIVA - Alerta BPCHOQUE</title>
+    
+    <!-- PWA Meta Tags -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="SIVA" />
+    
     <script src="https://cdn.tailwindcss.com"></script>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@^19.2.3",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+      }
+    }
+    </script>
+    <style>
+      /* Previne scroll elástico no iOS e garante fundo preto total */
+      html, body {
+        background-color: #000000;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        height: 100%;
+      }
+    </style>
+  </head>
   <body class="bg-black">
     <div id="root"></div>
 
@@ -31,6 +49,13 @@
         appId: "1:20528860006:web:c2556a032c5dd66e5896a7"
       };
       var __app_id = "1:20528860006:web:c2556a032c5dd66e5896a7";
+
+      // Register Service Worker for PWA
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js').catch(err => console.log('SW registration failed:', err));
+        });
+      }
     </script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
